[tool.poetry]
name = "hutch"
version = "0.1.0"
description = ""
authors = ["apophisnow <karlmohler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zeroconf = "^0.45.0"
csgo = "^1.0.0"
aiohttp = "^3.8.3"
requests = "^2.28.1"
pyserial = "^3.5"
toml = "^0.10.2"
wled = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
